# Binn-ICDE24

./: CMakeLists.txt  README.md
binn/: CMakeLists.txt  binn.cpp  compute.hpp  divide.hpp  load.hpp  options.hpp  structures.hpp  timer.hpp  traits.hpp  variables.hpp
mini-data/: adj.txt  wiki.mix
